--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/react-dom": "^17.0.3",
     "@types/react-leaflet": "^2.8.1",
     "@types/react-redux": "^7.1.16",
+    "@types/react-router-dom": "^5.1.7",
     "@types/react-sidebar": "^3.0.0",
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
