--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ritaramon.github.io/game-app",
+  "homepage": "http://ritaramon.github.io/map",
   "name": "test-day-boilerplate",
   "version": "0.1.0",
   "private": true,
