--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/leaflet": "^1.7.0",
+    "@types/leaflet-draw": "^1.0.3",
     "@types/react": "^17.0.3",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.3",
