--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.37",
     "axios": "^0.21.1",
-    "firebase": "^8.4.1",
+    "firebase": "^8.4.2",
     "konva": "^7.2.5",
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
@@ -19,10 +19,12 @@
     "react-konva": "*",
     "react-leaflet": "^2.7.0",
     "react-leaflet-draw": "^0.19.0",
+    "react-modal": "^3.13.1",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-sidebar": "^3.0.2",
+    "react-table": "^7.6.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
@@ -66,9 +68,11 @@
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.3",
     "@types/react-leaflet": "^2.8.1",
+    "@types/react-modal": "^3.12.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-sidebar": "^3.0.0",
+    "@types/react-table": "^7.0.29",
     "@types/redux": "^3.6.0",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.9",
