--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-leaflet-draw": "^0.19.0",
     "react-modal": "^3.13.1",
     "react-redux": "^7.2.3",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
     "react-sidebar": "^3.0.2",
+    "react-spinners": "^0.10.6",
     "react-table": "^7.6.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
@@ -71,6 +73,7 @@
     "@types/react-leaflet": "^2.8.1",
     "@types/react-modal": "^3.12.0",
     "@types/react-redux": "^7.1.16",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.15",
     "@types/react-sidebar": "^3.0.0",
