--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-sidebar": "^3.0.2",
     "react-spinners": "^0.10.6",
     "react-table": "^7.6.3",
+    "react-toastify": "^7.0.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-persist": "^6.0.0",
